--- a/fyd_collectimate/package.json
+++ b/fyd_collectimate/package.json
@@ -17,7 +17,11 @@
     },
     "dependencies": {
         "@ckeditor/ckeditor5-build-classic": "^43.3.1",
+        "@vitejs/plugin-react": "^5.1.2",
         "aos": "^2.3.4",
-        "lottie-web": "^5.12.2"
+        "lottie-web": "^5.12.2",
+        "react": "^19.2.3",
+        "react-dom": "^19.2.3",
+        "reactflow": "^11.11.4"
     }
 }
